--- a/frontend/src/components/layout/layout.module.css
+++ b/frontend/src/components/layout/layout.module.css
@@ -8,14 +8,12 @@
     padding: 5px;
     box-sizing: border-box;
     width: 100%;
-    height: 100%;
     display: grid;
     grid-template-columns: repeat(4, 25%);
-    grid-template-rows:max-content;
 }
 
 @media (min-width: 768px){
     .layoutGrid{
-        grid-template-columns: repeat(8, 1fr);
+        grid-template-columns: repeat(8, 12.5%);
     }
 }
