--- a/frontend/src/components/main/Main.module.css
+++ b/frontend/src/components/main/Main.module.css
@@ -2,8 +2,15 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    grid-column-start: 1;
-    grid-column-end: 5;
+    grid-column: span 4;
     aspect-ratio: 4/3;
     background-color: burlywood;
+}
+
+@media(min-width: 768px) {
+    .mainContainer{
+        grid-column-start: 2;
+        grid-row-start: 1;
+        aspect-ratio: 1/3;
+    }
 }
