--- a/frontend/src/components/profile/Profile.module.css
+++ b/frontend/src/components/profile/Profile.module.css
@@ -1,8 +1,16 @@
 .profileContainer{
+    display: flex;
     justify-content: center;
     align-items: center;
-    grid-column-start: 2;
-    grid-column-end: 5;
+    grid-column: span 3;
     aspect-ratio: 1/1;
     background-color: azure;
+}
+
+@media(min-width: 768px) {
+    .profileContainer{
+        grid-row-start: 1;
+        grid-column-start: 5;
+        grid-column-end: 9;
+    }
 }
