--- a/frontend/src/components/calendar/Calendar.module.css
+++ b/frontend/src/components/calendar/Calendar.module.css
@@ -1,15 +1,23 @@
 .calendarContainer{
-    grid-column: span 4;
-    background-color: cornflowerblue;
+    width: 100%;
+    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
+    grid-row-start: 9;
+    grid-row-end: 10;
+    grid-column-start: 1;
+    grid-column-end: 5;
+    box-sizing: border-box;
+    border: 3px solid black;
+    border-radius: 1rem;
 }
 
-@media(min-width: 768px) {
+@media(min-width: 1000px) {
     .calendarContainer{
         grid-column-start: 3;
-        grid-row-start: 2;
-        grid-column: span 4;
+        grid-column-end: 7;
+        grid-row-start: 4;
+        grid-row-end: 5;
     }
 }
