--- a/frontend/src/components/layout/layout.module.css
+++ b/frontend/src/components/layout/layout.module.css
@@ -1,19 +1,25 @@
 .layoutContainer{
+    position: relative;
     width: 100%;
     height: 100%;
-    background-color: bisque;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .layoutGrid{
     padding: 5px;
     box-sizing: border-box;
     width: 100%;
+    height: 100%;
     display: grid;
-    grid-template-columns: repeat(4, 25%);
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(9, 1fr);
 }
 
-@media (min-width: 768px){
+@media (min-width: 1000px){
     .layoutGrid{
-        grid-template-columns: repeat(8, 12.5%);
+        grid-template-columns: repeat(8, 1fr);
+        grid-template-rows: repeat(4, 1fr);
     }
 }
