--- a/frontend/src/components/main/Main.module.css
+++ b/frontend/src/components/main/Main.module.css
@@ -1,16 +1,27 @@
 .mainContainer{
+    width: 100%;
+    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-    grid-column: span 4;
-    aspect-ratio: 4/3;
-    background-color: burlywood;
+    grid-row-start: 4;
+    grid-row-end: 8;
+    grid-column-start: 1;
+    grid-column-end: 5;
+    box-sizing: border-box;
+    background:
+        url('/public/imgs/shinobu_nobg.png') no-repeat;
+    background-size: contain;
+    background-position: 30%;
+    border: 3px solid black;
+    border-radius: 1rem;
 }
 
-@media(min-width: 768px) {
+@media(min-width: 1000px) {
     .mainContainer{
         grid-column-start: 2;
+        grid-column-end: 6;
         grid-row-start: 1;
-        aspect-ratio: 1/3;
+        grid-row-end: 4;
     }
 }
