--- a/frontend/src/components/navbar/Navbar.module.css
+++ b/frontend/src/components/navbar/Navbar.module.css
@@ -1,19 +1,31 @@
 .navbarContainer{
+    width: 100%;
+    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-    aspect-ratio: 1/3;
     background-color: brown;
-    grid-column: span 1;
+    grid-row-start: 1;
+    grid-row-end: 4;
+    grid-column-start: 1;
+    grid-column-end: 2;
+    box-sizing: border-box;
+    background: 
+        url('/public/imgs/shinobu_nobg.png') no-repeat 50% 10%;
+    background-size: cover;
+    border: 3px solid black;
+    border-radius: 1rem;
 }
 
 .navbarContainer h1{
     writing-mode: vertical-lr;
 }
 
-@media(min-width: 768px) {
+@media(min-width: 1000px) {
     .navbarContainer{
         grid-row-start: 1;
-        grid-column: span 1;
+        grid-row-end: 4;
+        grid-column-start: 1;
+        grid-column-end: 2;
     }
 }
