--- a/frontend/src/components/profile/Profile.module.css
+++ b/frontend/src/components/profile/Profile.module.css
@@ -1,16 +1,23 @@
 .profileContainer{
+    width: 100%;
+    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-    grid-column: span 3;
-    aspect-ratio: 1/1;
-    background-color: azure;
+    grid-row-start: 1;
+    grid-row-end: 4;
+    grid-column-start: 2;
+    grid-column-end: 5;
+    box-sizing: border-box;
+    border: 3px solid black;
+    border-radius: 1rem;
 }
 
-@media(min-width: 768px) {
+@media(min-width: 1000px) {
     .profileContainer{
         grid-row-start: 1;
-        grid-column-start: 5;
+        grid-row-end: 4;
+        grid-column-start: 6;
         grid-column-end: 9;
     }
 }
