--- a/frontend/src/components/layout/layout.module.css
+++ b/frontend/src/components/layout/layout.module.css
@@ -2,13 +2,14 @@
     position: relative;
     width: 100%;
     height: 100%;
+    min-height: 667px;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
 .layoutGrid{
-    padding: 5px;
+    padding: 8px;
     box-sizing: border-box;
     width: 100%;
     height: 100%;
@@ -17,7 +18,7 @@
     grid-template-rows: repeat(9, 1fr);
 }
 
-@media (min-width: 1000px){
+@media (min-width: 1025px){
     .layoutGrid{
         grid-template-columns: repeat(8, 1fr);
         grid-template-rows: repeat(4, 1fr);
