--- a/frontend/src/components/main/Main.module.css
+++ b/frontend/src/components/main/Main.module.css
@@ -13,11 +13,19 @@
         url('/public/imgs/shinobu_nobg.png') no-repeat;
     background-size: contain;
     background-position: 30%;
-    border: 3px solid black;
-    border-radius: 1rem;
+    padding: 8px;
 }
 
-@media(min-width: 1000px) {
+.eventsContainer{
+    width: 100%;
+    height: 100%;
+    display: grid;
+    grid-template-columns: 3;
+    grid-template-rows: 1;
+    overflow-y: scroll;
+}
+
+@media(min-width: 1025px) {
     .mainContainer{
         grid-column-start: 2;
         grid-column-end: 6;
