--- a/frontend/src/components/events/Events.module.css
+++ b/frontend/src/components/events/Events.module.css
@@ -1,7 +1,9 @@
 .eventsContainer{
     width: 100%;
     height: 100%;
+    position: relative;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     grid-row-start: 8;
@@ -9,9 +11,74 @@
     grid-column-start: 1;
     grid-column-end: 3;
     box-sizing: border-box;
-    border: 3px solid black;
+    border: 1px solid black;
     border-radius: 1rem;
 }
+
+.eventsContainer::after{
+    content: 'Up Coming';
+    position: absolute;
+    font-family: var(--custom-font-secondary-medium);
+    font-size: 12px;
+    height: 8px;
+    top: 0;
+    left: 10%;
+    transform: translateY(-50%);
+    z-index: 5;
+    padding: 5px;
+    color: green;
+    background-color: white;
+    overflow: hidden;
+}
+
+.eventsHeader{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-family: var(--custom-font-light);
+    font-size: 12px;
+    padding-top: var(--spacing-collegue);
+}
+
+.headerLeft{
+    width: 40%;
+    padding-left: var(--spacing-collegue);
+}
+
+.headerRight{
+    width: 40%;
+    padding-right: var(--spacing-collegue);
+}
+
+.eventsBody{
+    padding-top: var(--spacing-collegue);
+    padding-bottom: var(--spacing-collegue);
+}
+
+.eventName {
+    font-family: var(--custom-font-secondary-medium);
+    font-size: 20px;
+    color: red;
+}
+
+.eventsDetails{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    font-family: var(--custom-font-light);
+    font-size: 12px;
+    padding-bottom: var(--spacing-collegue);
+}
+
+.eventsDetail:nth-child(1){
+    padding-left: var(--spacing-collegue);
+}
+
+.eventsDetail:last-child{
+    padding-right: var(--spacing-collegue);
+}
+
 
 @media(min-width: 1025px) {
     .eventsContainer{
