--- a/frontend/src/components/profile/Profile.module.css
+++ b/frontend/src/components/profile/Profile.module.css
@@ -142,8 +142,14 @@
     }
 }
 
-@media(min-width: 768px) {
+@media(min-width: 550px) {
     .bodyPicture{
         display: flex;
+    }
+}
+
+@media(min-width: 1025px) and (max-width: 1080px) {
+    .bodyPicture{
+        display: none;
     }
 }
