--- a/frontend/src/components/navbar/Navbar.module.css
+++ b/frontend/src/components/navbar/Navbar.module.css
@@ -31,6 +31,7 @@
     font-size: 6px;
     padding-left: var(--spacing-social);
     padding-bottom: var(--spacing-social);
+    padding-right: var(--spacing-social);
 }
 
 @media(min-width: 750px){
