--- a/frontend/src/components/events/Events.module.css
+++ b/frontend/src/components/events/Events.module.css
@@ -4,7 +4,7 @@
     position: relative;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     grid-row-start: 8;
     grid-row-end: 9;
@@ -49,6 +49,7 @@
 .headerRight{
     width: 40%;
     padding-right: var(--spacing-collegue);
+    text-align: end;
 }
 
 .eventsBody{
@@ -86,5 +87,10 @@
         grid-column-end: 3;
         grid-row-start: 4;
         grid-row-end: 5;
+    }
+
+    .eventsContainer::after{
+        font-size: 24px;
+        height: 24px;
     }
 }
