--- a/frontend/src/components/profile/Profile.module.css
+++ b/frontend/src/components/profile/Profile.module.css
@@ -13,12 +13,9 @@
 
 .profileInner{
     width: 100%;
-    height: 100%;
-    max-height: 200px;
-    max-width: 500px;
     display: flex;
     align-items: center;
-    gap: 5px;
+    gap: var(--spacing-boss);
     border: 1px solid black;
     border-radius: 1rem;
     box-shadow: 2px 2px black;
@@ -30,37 +27,60 @@
     flex-direction: column;
     justify-content: center;
     transform: rotate(180deg);
-    font-size: 16px;
+    font-size: var(--custom-font-size-sm);
     writing-mode: vertical-rl;
 }
 
 .userNameContainer{
     text-align: center;
+    padding-right: var(--spacing-tiny);
+    padding-left: var(--spacing-tiny);
     border-left: 1px solid black;
 }
 
 .userNameDesc, .titleDesc{
     text-align: center;
     font-family: var(--custom-font-bold);
-    font-size: 10px;
+    font-size: var(--custom-font-size-xs);
+    padding-right: var(--spacing-tiny);
+    padding-left: var(--spacing-tiny);
 }
 
 .profileRight{
     height: 100%;
-    font-size: 12px;
-    padding-right: var(--spacing-friend);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    font-size: var(--custom-font-size-sm);
+    padding-right: var(--spacing-social);
+    padding-left: var(--spacing-social);
 }
 
 .rightHeader{
     display: flex;
+    justify-content: space-between;
     padding-top: var(--spacing-social);
+}
+
+.rightHeader>div {
+    width: 40%;
+}
+
+.rightDesc{
+    /* padding-top: var(--spacing-social); */
+}
+
+.rightBody{
+    display: flex;
+    flex-direction: column;
+    /* padding-top: var(--spacing-social); */
+    padding-bottom: var(--spacing-social);
 }
 
 .headerRight{
     display: flex;
     flex-direction: column;
     text-align: center;
-    padding-left: var(--spacing-social);
 }
 
 .birthDate{
@@ -70,12 +90,7 @@
 
 .birthDateTitle{
     font-family: var(--custom-font-bold);
-    font-size: 10px;
-}
-
-.rightBody{
-    display: flex;
-    flex-direction: column;
+    font-size: var(--custom-font-size-xs);
 }
 
 .bodyInfo{
@@ -110,7 +125,7 @@
 .nameTitle, .roleTitle, .emailTitle{
     text-align: start;
     font-family: var(--custom-font-bold);
-    font-size: 10px;
+    font-size: var(--custom-font-size-xs);
 }
 
 .bodyPicture{
@@ -142,7 +157,32 @@
     }
 }
 
-@media(min-width: 550px) {
+@media(min-width: 350px) {
+    .profileInner{
+        max-height: 200px;
+    }
+}
+
+@media(min-width: 400px) {
+    .profileInner{
+        max-height: 220px;
+    }
+}
+
+@media(min-width: 750px) {
+    .profileInner{
+        max-height: 340px;
+        max-width: 500px;
+    }
+}
+
+@media(min-width: 1000px) {
+    .profileInner{
+        max-width: 700px;
+    }
+}
+
+@media(min-width: 825px) {
     .bodyPicture{
         display: flex;
     }
