--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -34,12 +34,20 @@
   --custom-font-secondary-light: 'Tourney-Light';
   --custom-font-secondary-thin: 'Tourney-Thin';
 
-  --spacing-tiny: 5px;
-  --spacing-friend: 8px;
-  --spacing-collegue: 13px;
-  --spacing-social: 21px;
-  --spacing-manager: 34px;
-  --spacing-boss: 55px;
+  --spacing-tiny: 2px;
+  --spacing-friend: 4px;
+  --spacing-collegue: 6px;
+  --spacing-social: 8px;
+  --spacing-manager: 10px;
+  --spacing-boss: 12px;
+
+  --custom-font-size-xs: 8px;
+  --custom-font-size-sm: 12px;
+  --custom-font-size-rg: 16px;
+  --custom-font-size-md: 20px;
+  --custom-font-size-lg: 24px;
+  --custom-font-size-xl: 28px;
+  --custom-font-size-xxl: 32px;
 }
 
 html, body{
@@ -53,3 +61,58 @@ html, body{
 ::-webkit-scrollbar{
   display: none;
 }
+
+@media(min-width: 350px) {
+  :root{
+    --custom-font-size-xs: 6px;
+    --custom-font-size-sm: 10px;
+    --custom-font-size-rg: 14px;
+    --custom-font-size-md: 18px;
+    --custom-font-size-lg: 22px;
+    --custom-font-size-xl: 26px;
+    --custom-font-size-xxl: 34px;
+  }
+}
+
+@media(min-width: 400px) {
+  :root{
+    --spacing-tiny: 4px;
+    --spacing-friend: 6px;
+    --spacing-collegue: 8px;
+    --spacing-social: 10px;
+    --spacing-manager: 12px;
+    --spacing-boss: 14px;
+
+    --custom-font-size-xs: 8px;
+    --custom-font-size-sm: 12px;
+    --custom-font-size-rg: 16px;
+    --custom-font-size-md: 20px;
+    --custom-font-size-lg: 24px;
+    --custom-font-size-xl: 28px;
+    --custom-font-size-xxl: 36px;
+  }
+}
+
+@media(min-width: 600px) {
+  :root{
+    --custom-font-size-xs: 14px;
+    --custom-font-size-sm: 18px;
+    --custom-font-size-rg: 22px;
+    --custom-font-size-md: 26px;
+    --custom-font-size-lg: 30px;
+    --custom-font-size-xl: 34px;
+    --custom-font-size-xxl: 42px;
+  }
+}
+
+/* @media(min-width: 800px) {
+  :root{
+    --custom-font-size-xs: 18px;
+    --custom-font-size-sm: 22px;
+    --custom-font-size-rg: 24px;
+    --custom-font-size-md: 30px;
+    --custom-font-size-lg: 34px;
+    --custom-font-size-xl: 38px;
+    --custom-font-size-xxl: 46px;
+  }
+} */
