--- a/frontend/src/components/profile/Profile.module.css
+++ b/frontend/src/components/profile/Profile.module.css
@@ -141,7 +141,6 @@
     width: 120px;
     height: 120px;
     border: 1px solid black;
-    box-shadow: black 2px 2px;
 }
 
 .imgContainer img{
@@ -159,26 +158,30 @@
 
 @media(min-width: 350px) {
     .profileInner{
-        max-height: 200px;
+        max-height: 150px;
     }
 }
 
 @media(min-width: 400px) {
     .profileInner{
-        max-height: 220px;
+        max-height: 170px;
+    }
+}
+
+@media(min-width: 600px) {
+    .profileInner{
+        max-height: 250px;
     }
 }
 
 @media(min-width: 750px) {
     .profileInner{
-        max-height: 340px;
-        max-width: 500px;
+        max-height: 290px;
     }
 }
 
 @media(min-width: 1000px) {
     .profileInner{
-        max-width: 700px;
     }
 }
 
@@ -188,7 +191,7 @@
     }
 }
 
-@media(min-width: 1025px) and (max-width: 1080px) {
+@media(min-width: 1025px) and (max-width: 1550px) {
     .bodyPicture{
         display: none;
     }
