--- a/frontend/src/commoncss/fonts.css
+++ b/frontend/src/commoncss/fonts.css
@@ -123,3 +123,10 @@
     font-weight: 200;
     font-style: normal;
 }
+
+@font-face {
+    font-family: Hurricane-Regular;
+    src: url(../assets/fonts/Hurricane-Regular.ttf);
+    font-weight: 400;
+    font-style: normal;
+}
