--- a/frontend/src/components/events/Events.module.css
+++ b/frontend/src/components/events/Events.module.css
@@ -1,22 +1,28 @@
 .eventsContainer{
     width: 100%;
     height: 100%;
+    grid-row-start: 8;
+    grid-row-end: 9;
+    grid-column-start: 1;
+    grid-column-end: 3;
+}
+
+
+.eventsInner{
+    width: 100%;
+    height: 100%;
     position: relative;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    grid-row-start: 8;
-    grid-row-end: 9;
-    grid-column-start: 1;
-    grid-column-end: 3;
     box-sizing: border-box;
     border: 1px solid black;
-    border-radius: 1rem;
-    padding: var(--spacing-collegue);
+    padding: var(--spacing-tiny);
+    background-color: var(--color-surface-main);
 }
 
-.eventsContainer::after{
+.eventsInner::after{
     content: 'Up Coming';
     position: absolute;
     font-family: var(--custom-font-secondary-medium);
@@ -26,9 +32,9 @@
     left: 10%;
     transform: translateY(-50%);
     z-index: 5;
-    padding: 5px;
+    padding: var(--spacing-collegue);
     color: var(--color-pink-1);
-    background-color: white;
+    background-color: var(--color-bg-main);
     display: flex;
     align-items: center;
     border-radius: 1rem;
