--- a/frontend/src/components/layout/layout.module.css
+++ b/frontend/src/components/layout/layout.module.css
@@ -6,6 +6,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: var(--color-bg-main);
+    color: white;
 }
 
 .layoutGrid{
