--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,18 +1,18 @@
 @import './commoncss/fonts.css';
 
 :root {
-  --color-pink-1: #ffa6d9;
-  --color-pink-2: hsl(from #ffa6d9 h s l / 87%);
-  --color-pink-3: hsl(from #ffa6d9 h s l / 66%);
-  --color-pink-4: hsl(from #ffa6d9 h s l / 32%);
-  --color-green-1: #6bffb3;
-  --color-green-2: hsl(from #6bffb3 h s l / 87%);
-  --color-green-3: hsl(from #6bffb3 h s l / 66%);
-  --color-green-4: hsl(from #6bffb3 h s l / 32%);
-  --color-violet-1: #9161f2;
-  --color-violet-2: hsl(from #9161f2 h s l / 87%);
-  --color-violet-3: hsl(from #9161f2 h s l / 66%);
-  --color-violet-4: hsl(from #9161f2 h s l / 32%);
+  --color-bg-main: #b5d1cc;
+
+  --color-surface-main: #000831;
+
+  --color-accent-light: #b85e00;
+  --color-accent-dark: #362304;
+
+  --color-blue-primary: #96bfe6;
+
+  --color-green-primary: #00d973;
+
+  --color-red-primary: #fa2b00;
 
   --custom-font-bold: 'Suse-Bold';
   --custom-font-boldItalic: 'Suse-BoldItalic';
@@ -26,6 +26,7 @@
   --custom-font-lightItalic: 'Suse-LightItalic';
   --custom-font-thin: 'Suse-Thin';
   --custom-font-thinItalic: 'Suse-ThinItalic';
+  --custom-font-sec-regular: 'Hurricane-Regular';
 
   --custom-font-secondary-xbold: 'Tourney-XBold';
   --custom-font-secondary-bold: 'Tourney-Bold';
