--- a/frontend/src/components/calendar/Calendar.module.css
+++ b/frontend/src/components/calendar/Calendar.module.css
@@ -9,7 +9,8 @@
     grid-column-start: 1;
     grid-column-end: 5;
     box-sizing: border-box;
-    border: 1px solid black;
+    border-top: 1px solid var(--color-layout-accent-dark);
+    border-bottom: 1px solid var(--color-layout-accent-dark);
     padding: var(--spacing-tiny);
     background-color: var(--color-surface-main);
 }
