--- a/frontend/src/components/profile/Profile.module.css
+++ b/frontend/src/components/profile/Profile.module.css
@@ -16,10 +16,13 @@
     display: flex;
     align-items: center;
     gap: var(--spacing-boss);
-    border: 2px solid var(--color-accent-light);
-    border-radius: 1rem;
-    box-shadow: 3px 4px var(--color-accent-light);
-    background-color: var(--color-surface-main);
+    border-left: 2px solid silver;
+    border-top: 2px solid silver;
+    border-radius: 1rem; 
+    box-shadow:
+        4px 4px 0 2px var(--color-layout-accent-dark),
+        -1px -1px 0 1px var(--color-layout-accent-dark);
+    background-color: var(--color-layout-tertiary);
 }
 
 .profileLeft{
@@ -28,7 +31,8 @@
     flex-direction: column;
     justify-content: center;
     transform: rotate(180deg);
-    font-size: var(--custom-font-size-sm);
+    font-family: var(--custom-font-bold);
+    font-size: var(--custom-font-size-md);
     writing-mode: vertical-rl;
 }
 
@@ -36,8 +40,15 @@
     text-align: center;
     padding-right: var(--spacing-tiny);
     padding-left: var(--spacing-tiny);
-    border-left: 1px solid var(--color-accent-light);
-    color: var(--color-green-primary);
+    border-left: 2px solid var(--color-layout-accent-light);
+    box-shadow: -2px 0 0 0 silver;
+    color: var(--color-layout-accent-light);
+    text-shadow: 
+    1px 0px black,
+    0px 1px black,
+    -1px 0px black,
+    0px -1px black,
+    -2px 2px 0px var(--color-layout-secondary);
 }
 
 .userNameDesc, .titleDesc{
@@ -46,7 +57,24 @@
     font-size: var(--custom-font-size-xs);
     padding-right: var(--spacing-tiny);
     padding-left: var(--spacing-tiny);
-    color: var(--color-red-primary);
+}
+
+.userNameDesc{
+    text-shadow: 
+        1px 0px black,
+        0px 1px black,
+        -1px 0px black,
+        0px -1px black,
+        -2px 2px 0px var(--color-layout-secondary);
+}
+
+.titleDesc{
+    text-shadow: 
+    1px 0px black,
+    0px 1px black,
+    -1px 0px black,
+    0px -1px black,
+    2px 2px 0px var(--color-layout-secondary);
 }
 
 .profileRight{
@@ -63,6 +91,12 @@
     display: flex;
     justify-content: space-between;
     padding-top: var(--spacing-social);
+    text-shadow: 
+    1px 0px black,
+    0px 1px black,
+    -1px 0px black,
+    0px -1px black,
+    2px 2px 0px var(--color-layout-secondary);
 }
 
 .rightHeader>div {
@@ -70,7 +104,7 @@
 }
 
 .rightDesc{
-    /* padding-top: var(--spacing-social); */
+    color: var(--color-layout-accent-light);
 }
 
 .rightBody{
@@ -84,7 +118,7 @@
     font-family: var(--custom-font-sec-regular);
     font-size: var(--custom-font-size-xl);
     line-height: 0.8;
-    color: #ff4dc9;
+    color: var(--color-inner-pink);
 }
 
 .headerRight{
@@ -94,8 +128,9 @@
 }
 
 .birthDate{
-    border-bottom: 1px solid black;
+    border-bottom: 2px solid var(--color-layout-accent-light);
     font-family: var(--custom-font-light);
+    box-shadow: 0px 1px 0px var(--color-layout-secondary);
 }
 
 .birthDateTitle{
@@ -109,12 +144,24 @@
     flex-direction: column;
     justify-content: center;
     padding-top: var(--spacing-social);
+    text-shadow: 
+    1px 0px black,
+    0px 1px black,
+    -1px 0px black,
+    0px -1px black,
+    2px 2px 0px var(--color-layout-secondary);
 }
 
 .titleId{
     font-family: var(--custom-font-bold);
     text-align: center;
     color: var(--color-green-primary);
+    text-shadow: 
+    1px 0px black,
+    0px 1px black,
+    -1px 0px black,
+    0px -1px black,
+    2px 2px 0px var(--color-layout-secondary);
 }
 
 .infoUp, .infoDown{
@@ -130,13 +177,15 @@
 .name, .role, .email{
     text-align: start;
     font-family: var(--custom-font-light);
-    border-bottom: 1px solid black;
+    border-bottom: 2px solid var(--color-layout-accent-light);
+    box-shadow: 0px 1px 0px var(--color-layout-secondary);
 }
 
 .nameTitle, .roleTitle, .emailTitle{
     text-align: start;
     font-family: var(--custom-font-bold);
     font-size: var(--custom-font-size-xs);
+    color: var(--color-layout-accent-light);
 }
 
 .bodyPicture{
@@ -149,9 +198,9 @@
 
 .imgContainer{
     box-sizing: border-box;
-    width: 120px;
-    height: 120px;
-    border: 1px solid black;
+    width: 150px;
+    height: 150px;
+    border: 4px solid var(--color-layout-accent-dark);
 }
 
 .imgContainer img{
