--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -12,6 +12,8 @@
   --color-card-green: #b5ffc2;
   --color-card-blue: #29bdad;
 
+  --color-calendar-blend: #5c2c45;
+
   --color-inner-pink: #ff4dc9;
   --color-inner-yellow: #fff59e;
   --color-inner-gray: #b5d1cc;
