--- a/frontend/src/components/tickets/Tickets.module.css
+++ b/frontend/src/components/tickets/Tickets.module.css
@@ -2,6 +2,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    position: relative;
     grid-row-start: 8;
     grid-row-end: 9;
     grid-column-start: 3;
@@ -11,7 +12,101 @@
     border-bottom: 1px solid var(--color-layout-accent-dark);
     padding: var(--spacing-tiny);
     background-color: var(--color-surface-main);
+    overflow: hidden;
 }
+
+.ticketsInner{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--color-inner-yellow);
+}
+
+.ticketCornerHole{
+    position: absolute;
+    width: calc(var(--spacing-boss)*1.5);
+    aspect-ratio: 1/1;
+    border-radius: 50%;
+    background-color: var(--color-layout-main);
+}
+
+.ticketCornerHole:nth-last-of-type(1){
+    top: 0;
+    left: 0;
+    transform: translateX(-40%) translateY(-40%);
+}
+
+.ticketCornerHole:nth-last-of-type(2){
+    top: 0;
+    right: 0;
+    transform: translateX(40%) translateY(-40%);
+}
+
+.ticketCornerHole:nth-last-of-type(3){
+    bottom: 0;
+    left: 0;
+    transform: translateX(-40%) translateY(40%);
+}
+
+.ticketCornerHole:nth-last-of-type(4){
+    bottom: 0;
+    right: 0;
+    transform: translateX(40%) translateY(40%);
+}
+
+.ticketContent{
+    width: 90%;
+    height: 90%;
+    display: flex;
+    border: 1px solid var(--color-layout-main);
+    outline: 1px solid var(--color-layout-main);
+    outline-offset: 2px;
+    color: var(--color-layout-main);
+}
+
+.contentHeader{
+    height: 100%;
+    writing-mode: vertical-lr;
+    text-align: center;
+    font-family: var(--custom-font-bold);
+    font-size: var(--custom-font-size-xs);
+    border-left: 1px solid var(--color-layout-main);
+    padding-left: var(--spacing-collegue);
+    padding-right: var(--spacing-collegue);
+}
+
+.contentBody>div{
+    line-height: 0.85;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.firstContent{
+    font-size: var(--custom-font-size-xl);
+}
+
+.secondContent{
+    font-family: var(--custom-font-semiBold);
+    font-size: var(--custom-font-size-lg);
+}
+
+.thirdContent{
+    font-size: var(--custom-font-size-xl);
+}
+
+.contentBody{
+    height: 100%;
+    width: 100%;
+    font-family: var(--custom-font-bold);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
 
 @media(min-width: 1025px) {
     .ticketsContainer{
